--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                   <i class="fa fa-github d-inline-flex align-items-center justify-content-center text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                   <div class="pl-3">
                       <h5>Github</h5>
-                      <a href="https://github.com/3stherMueni" style="color:#000">@3stherMueni</a>
+                      <a href="https://github.com/essym19" style="color:#000">@3stherMueni</a>
                   </div>
               </div>
               <br>
@@ -106,7 +106,7 @@
                     <i class="fa fa-twitter d-inline-flex align-items-center justify-content-center text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                     <div class="pl-3">
                         <h5>Twitter</h5>
-                        <a href="https://twitter.com/EMueni19" style="color:#000">@EMueni19</a>
+                        <a href="https://twitter.com/essym_19" style="color:#000">@EMueni19</a>
                     </div>
                 </div>
                 <br>
