--- a/portfolio.html
+++ b/portfolio.html
@@ -67,9 +67,8 @@
                           <p class="card-text">I can translate conceptual ideas and sketches into precide and technical drawings. I am familiar with different CAD 
                             softare packagess such as <b>Fusion 360</b>, <b>AutoCAD</b> , among others. I can create detailed and complex models for a variety of 
                             applications including product design, architecture, engineering, and manufacturing.</p>
-                      <!-- </div>
-                      <a href="" class="btn btn-primary px-4 mx-auto mb-4">See More</a>
-                  </div> -->
+                       </div>
+                  </div> 
               </div>
               <div class="col-lg-4 mb-5">
                   <div class="card border-0 bg-light shadow-sm pb-2">
@@ -79,9 +78,8 @@
                           <p class="card-text">I create layouts for PCBs and schematics that can be used in building electronic device. This including selecting the right materials,
                             placing components in the correct location, and determining the size and shape of the PCB. My go to softwares for PCB and schematics design are <b>EasyEDA</b>, <b>Altium</b>, <b>Proteus</b>, <b>Fritzing</b> among others. 
                           </p>
-                      <!-- </div>
-                      <a href="" class="btn btn-primary px-4 mx-auto mb-4">See More</a>
-                  </div> -->
+                      </div>
+                  </div>
               </div>
               <div class="col-lg-4 mb-5">
                   <div class="card border-0 bg-light shadow-sm pb-2">
@@ -91,9 +89,8 @@
                           <p class="card-text">I create functional prototypes of electronic and embedded systems that include microcontrollers or microprocessors,
                             along with other components such as sensors, actuators, and communication modules. I can sellect appropriate components for the system and assemble them in a way that meets required specifications. 
                           </p>
-                      <!-- </div>
-                      <a href="" class="btn  px-4 mx-auto mb-4">See More</a>
-                  </div> -->
+                      </div>
+                  </div> 
               </div>
           </div>
       </div>
