--- a/contact.html
+++ b/contact.html
@@ -85,14 +85,14 @@
                          
             </div>
             <div class="col-lg-5 mb-5">
-                <p>Get in touch with me and let us chat more on how we can work together.</p>
-                <div class="d-flex">
+                <p>Get in touch with me and let us chat more about how we can work together.</p>
+                <!-- <div class="d-flex">
                   <i class="fa fa-github d-inline-flex align-items-center justify-content-center text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                   <div class="pl-3">
                       <h5>Github</h5>
                       <a href="https://github.com/essym19" style="color:#000">@3stherMueni</a>
                   </div>
-              </div>
+              </div> -->
               <br>
               <div class="d-flex">
                 <i class="fa fa-linkedin d-inline-flex align-items-center justify-content-center text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
@@ -102,13 +102,13 @@
                 </div>
               </div>
               <br>
-                <div class="d-flex">
+                <!-- <div class="d-flex">
                     <i class="fa fa-twitter d-inline-flex align-items-center justify-content-center text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                     <div class="pl-3">
                         <h5>Twitter</h5>
                         <a href="https://twitter.com/essym_19" style="color:#000">@EMueni19</a>
                     </div>
-                </div>
+                </div> -->
                 <br>
                 <div class="d-flex">
                     <i class="fa fa-brands fa-hashnode d-inline-flex align-items-center justify-content-center text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
